added delete and addCard function

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,7 +1,8 @@
 .Main {
     border-right: 1px solid;
     border-left: 1px solid;
+    border-bottom: 1px solid;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
